k8s_manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: workshop
  labels:
    role: frontend
    env: demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: 428156589112.dkr.ecr.eu-west-1.amazonaws.com/workshop-frontend:e46f148ca384ac55e83b5f3da02378b8d9d7248a
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 2
        #   periodSeconds: 5
        # readinessProbe:
        #   httpGet:
        #      path: /
        #      port: 3000
        #   initialDelaySeconds: 5
        #   periodSeconds: 5
        #   successThreshold: 1
